# asea-x

./: .env.example  .gitignore  .ruff.toml  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt  runbook.md  specification.md
src/: init.py  main.py
src/UI/: terminal_ui.py
src/agents/: base_agent.py  debugger.py  developer.py  linter.py  planner.py
src/core/: init.py  mode_manager.py  orchestrator.py  safety_system.py  state_manager.py
src/execution/: command_executor.py  runtime_monitor.py
src/llm/: deepseek_client.py
src/tools/: context_loader.py  file_manager.py  git_manager.py  init.py
src/ui/: terminal_ui.py
src/validation/: doc_validator.py  lint_engine.py
