[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asea-x"
version = "1.0.0"
description = "Autonomous Software Engineering Agent System"
authors = [{name = "ASEA-X Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.12.0",
    "anthropic>=0.25.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "click>=8.1.7",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "watchfiles>=0.21.0",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "tiktoken>=0.5.2",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pydocstyle>=6.3.0",
    "sentry-sdk>=1.40.0",
    "redis>=5.0.0",
    "psutil>=5.9.0",
    "docker>=6.1.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.2",
    "tabulate>=0.9.0",
    "textual>=0.41.0",
    "prompt-toolkit>=3.0.0",
    "pygments>=2.17.0",
    "chardet>=5.2.0",
    "semantic-version>=2.10.0",
    "jsonschema>=4.20.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.18.0",
    "pre-commit>=3.5.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
web = [
    "streamlit>=1.28.0",
    "gradio>=4.0.0",
]

[project.urls]
Repository = "https://github.com/yourusername/asea-x"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
